# Ananicy

./: .editorconfig  .gitattributes  .github_changelog_generator  .gitignore  .kateconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  Makefile.am  README.md  ananicy.py  configure.ac  mkinstalldirs  package.sh
.github/: pull.yml
ananicy.d/: 00-cgroups.cgroups  00-types.types
ananicy.d/00-default/: 0ad.rules  7z.rules  _archivers.rules  _kde.rules  _steam.rules  _systemd.rules  firefox.rules  telegram.rules  yay.rules
debian/: ananicy.init  ananicy.service  changelog  clean  control  copyright  install  links  manpages  rules  watch
debian/patches/: move-systemd-service-file.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
